# math-knowledge-base

./: .gitignore  CHANGELOG.md  GUI_README.md  Makefile  README.md  TODO.md  interface.py  mathkb_config.py  pyproject.toml  requirements.txt  ruff.toml  run_gui.py  setup.py
.streamlit/: config.toml
MD_files/: ejemplo.md  example.md  formato_definicion.md  formato_proposicion.md
app/: app_editor_markdown.py  editor_streamlit.py  main.py  utils.py
conversion/: markdownparser.py  yaml_latex_parser.py
db/: mathmongo.py
docs/: ADVANCED_READER_CONCEPT_LINKING_S5C.md  ADVANCED_READER_EVENT_CONTRACT.md  ADVANCED_READER_S5A.md  ADVANCED_READER_SECURITY.md  COCID_DRIVE_DOCS_TUTORIAL_IMPLEMENTATION.md  CONCEPT_LINKING_UX_S4_3.md  GUIA_READING_SPACE_MATHMONGO_BUILD.md  LOCAL_INSTALLER_FEASIBILITY_AUDIT.md  MANAGED_SOURCE_WORKFLOW.md  PDF_PREVIEW_CORNELL_CPI_AUDIT.md  PHASE_ADD_CONCEPT_MANAGED_SOURCE_SELECTION.md  PHASE_ADD_CONCEPT_REFERENCE_IMPORT.md  PHASE_EDIT_CONCEPT_IDENTITY_PRESERVATION.md  PHASE_EDIT_CONCEPT_SOURCE_LINK_AUDIT.md  PHASE_EDIT_CONCEPT_UPDATE_FEEDBACK.md  PHASE_FRESH_DATABASE_LIFECYCLE_E2E.md  PHASE_L1_5_DESKTOP_LAUNCHER_ICON.md  PHASE_L1_INSTALLABLE_ENTRYPOINT.md  PHASE_L2_XDG_PATHS_AND_SAFE_MIGRATION.md  PHASE_LINK_LEGACY_CONCEPT_TO_MANAGED_SOURCE.md  PHASE_MANAGED_SOURCE_WORKFLOW_COMPATIBILITY_AUDIT.md  PHASE_MANAGED_SOURCE_WORKFLOW_COMPATIBILITY_FIXES.md  PHASE_MANAGED_SOURCE_WORKFLOW_COMPATIBILITY_REAUDIT.md  PHASE_READING_SPACE_GUIDE_REFRESH.md  PHASE_S0_SOURCE_DOCUMENT_READER_AUDIT.md  PHASE_S1A_SOURCE_CATALOG_CORE.md  PHASE_S1B_SOURCE_CATALOG_UI.md  PHASE_S1C1_LEGACY_SOURCE_CATALOG_PLANNER.md  PHASE_S1C2A_CATALOG_BOOTSTRAP_ENGINE.md  PHASE_S1C2P_GUARDED_PRODUCTION_AND_PORTABILITY.md  PHASE_S1C2P_MATHV0_CATALOG_BOOTSTRAP.md  PHASE_SOURCE_ADD_CONCEPT_INTEGRATION_AUDIT.md  PHASE_SOURCE_LINK_CONTRACT.md  READING_ANNOTATIONS_S4.md  READING_SPACE_POLISH_S4_2.md  READING_SPACE_S3.md  READING_WORKSPACE_UX_S4_1.md  RELEASE_NOTES_v0.13.0_MANAGED_SOURCE_WORKFLOW.md  SIMPLIFIED_READING_WORKFLOW.md  SOURCE_DOCUMENTS_S2.md  (+5 more)
editor/: app_editor_markdown.py  concept_reference_form.py  cuaderno_page.py  database_connections.py  database_import_page.py  database_scope.py  document_builder.py  edit_concept_feedback.py  editor_streamlit.py  interactive_graph.py  interface.py  note_branding.py  note_export.py  pdf_export.py  pdf_preview.py  streamlit_compat.py
examples/: edition.ipynb
export/: exportadorlatex.py  exportar_qmd_desde_mongo.py
exported/: miestilo.sty
exporters/: exportadorlatex.py  exportar_qmd_desde_mongo.py
exporters_latex/: actualizar_quarto_yml.py  concept_ordering.py  exportadorlatex.py  exportar_qmd_desde_mongo.py  latex_compile.py  latex_validation.py  unified_document.py
exporters_quarto/: quarto_exporter.py
math_knowledge_base.egg-info/: SOURCES.txt  requires.txt  top_level.txt
mathdatabase/: mathmongo.py
mathdbmongo/: pyvenv.cfg
mathmongo/: __init__.py  __main__.py  cli.py  config.py  desktop.py  launcher.py  migrate_source_catalog.py  migrate_xdg.py  paths.py
notebooks/: .ruff.toml  edition.ipynb  edition_v2.ipynb  edition_v3.ipynb  test.ipynb
parsers/: markdownparser.py  yaml_latex_parser.py
plantillas/: .json  corolario.json  definicion.json  ejemplo.json  proposicion.json  teorema.json
quarto_book/: _quarto.yml  definiciones.qmd  ejemplos.qmd  index.qmd  observaciones.qmd  teoremas.qmd
quarto_book_build/: _quarto.yml  references.bib
schemas/: schemas.py
scripts/: __init__.py  build_cocid_drive_docs_tutorial_assets.py  build_reading_space_guide.sh  cocid_tutorial_streamlit_validation.py  export_quarto_book.py  export_quarto_from_mongo.py  install_chktex.sh  install_cuaderno_mode.py  install_quarto.sh  make_desktop_shortcut.sh  seed_cocid_drive_docs_tutorial.py  test_cornell_renderer.py  validate_latex_concepts.py
templates_latex/: cpi_landscape_letter_v1.tex  miestilo.sty  notes.cls  notes.sty
test/: formato_corolario.md  grafo_espacios_metricos.html  probar_grafo.py  probar_mongo.py  probar_parser.py  test.tex  v001.ipynb
tests/: advanced_reader_test_support.py  conftest.py  local_runtime_browser_probe.mjs  run_advanced_reader_e2e.py  run_local_runtime_e2e.py  source_catalog_migration_fakes.py  test_active_database_labels.py  test_add_concept_managed_source_selection.py  test_add_concept_reference_import_ui.py  test_advanced_reader_api.py  test_advanced_reader_concept_linking.py  test_advanced_reader_launcher.py  test_advanced_reader_packaging.py  test_advanced_reader_ranges.py  test_advanced_reader_security.py  test_advanced_reader_streamlit_link.py  test_advanced_reader_visual_annotations.py  test_cocid_tutorial_seed.py  test_concept_linking_apptest.py  test_concept_linking_ui.py  test_concept_linking_wizard.py  test_concept_reference_bibliography.py  test_concept_reference_schema.py  test_cornell_content_blocks.py  (+84 more)
(+294 files in other folders)
