[tool.poetry]
name = "mathmongo"
version = "0.1.0"
description = "Base de conocimiento matemática con modelos Pydantic y exportación a LaTeX"
authors = ["Enrique Díaz Ocampo <doeo113900@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "mathmongo" },
    { include = "app" },
    { include = "editor" },
    { include = "exporters_latex" },
    { include = "exporters_quarto" },
    { include = "mathdatabase" },
    { include = "parsers" },
    { include = "schemas" },
    { include = "scripts" },
    { include = "visualizations" }
]
include = [
    { path = "assets/icons/**", format = ["sdist", "wheel"] },
    { path = "mathkb_config.py", format = ["sdist", "wheel"] },
    { path = "quarto_book/**", format = ["sdist", "wheel"] },
    { path = "scripts/make_desktop_shortcut.sh", format = ["sdist"] },
    { path = "templates_latex/**", format = ["sdist", "wheel"] }
]

[tool.poetry.scripts]
mathmongo = "mathmongo.cli:main"
mathmongo-desktop = "mathmongo.desktop:main"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7"
pymongo = "^4.6"
streamlit = "^1.35"
pyyaml = "^6.0"
networkx = "^3.3"
matplotlib = "^3.9"
jinja2 = "^3.1"
typer = "^0.12"
latexify-py = "*"
pyvis = "*"
python-slugify = "*"
markdown-it-py = { version = "*", extras = ["linkify", "plugins"] }
rapidfuzz = "*"
bibtexparser = "*"
streamlit-ace = "*"
plotly = ">=5.0"
# Otros si los usas:
# latex2mathml = "^3.74"
# watchdog = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
ruff = "^0.4"
ipykernel = "^6.29"
jupyter = "^1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
