[tool.poetry]
name = "mathmongo"
version = "0.1.0"
description = "Base de conocimiento matemática con modelos Pydantic y exportación a LaTeX"
authors = ["Enrique Díaz Ocampo <doeo113900@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "mathmongo" },
    { include = "app" },
    { include = "editor" },
    { include = "exporters_latex" },
    { include = "exporters_quarto" },
    { include = "mathdatabase" },
    { include = "parsers" },
    { include = "schemas" },
    { include = "scripts" },
    { include = "visualizations" }
]
include = [
    { path = "assets/icons/**", format = ["sdist", "wheel"] },
    { path = "docs/ADVANCED_READER_CONCEPT_LINKING_S5C.md", format = ["sdist", "wheel"] },
    { path = "docs/UNIFIED_LOCAL_RUNTIME_S5B_1.md", format = ["sdist", "wheel"] },
    { path = "docs/VISUAL_ANNOTATIONS_S5B.md", format = ["sdist", "wheel"] },
    { path = "mathmongo/advanced_reader/static/**", format = ["sdist", "wheel"] },
    { path = "mathkb_config.py", format = ["sdist", "wheel"] },
    { path = "quarto_book/**", format = ["sdist", "wheel"] },
    { path = "scripts/make_desktop_shortcut.sh", format = ["sdist"] },
    { path = "templates_latex/**", format = ["sdist", "wheel"] }
]

[tool.poetry.scripts]
mathmongo = "mathmongo.cli:main"
mathmongo-desktop = "mathmongo.desktop:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pydantic = "^2.7"
pymongo = "^4.6"
streamlit = { version = "^1.35", extras = ["pdf"] }
streamlit-pdf = ">=1.0.0,<2"
pyyaml = "^6.0"
networkx = "^3.3"
matplotlib = "^3.9"
jinja2 = "^3.1"
typer = "^0.12"
latexify-py = "*"
pyvis = "*"
python-slugify = "*"
markdown-it-py = { version = "*", extras = ["linkify", "plugins"] }
rapidfuzz = "*"
bibtexparser = "*"
streamlit-ace = "*"
plotly = ">=5.0"
# Otros si los usas:
# latex2mathml = "^3.74"
# watchdog = "^4.0"
fastapi = ">=0.115,<1.0"
uvicorn = ">=0.34,<1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
ruff = "^0.4"
ipykernel = "^6.29"
jupyter = "^1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
